--- a/application/layouts/scripts/d3bit.phtml
+++ b/application/layouts/scripts/d3bit.phtml
@@ -10,6 +10,7 @@
 			->appendFile("/js/underscore.js")
 			->appendFile("/js/skills.js")
 			->appendFile("/js/unmin/calcv2.js")
+			->appendFile("/js/unmin/itembuilder.js")
 	?>
 </head>
 <body>
@@ -25,7 +26,13 @@
         <? endforeach ?>
       </select>
     </div>
-    <div class="compare-diff">diff</div>
+    <div class="compare-diff">
+      <h3>Error: Couldn't load</h3>
+      <p><a href=''></a></p>
+    </div>
+    <div id='simulate-item'>
+      test
+    </div>
   </div>
 <script type="text/javascript" charset="utf-8">
 <? if($this->build->passives && $this->build->passives != "null" && count($this->build->passives)): ?>
@@ -42,15 +49,35 @@ var newItem = <?= json_encode($this->item->cleanExport()) ?>,
     slot = $(".compare-slot"),
     newItemSlot = slot.val(),
     calc = new d3up.BuildCalculator,
+    builder = new d3up.ItemBuilder,
     items = <?= $this->build->equipment->getGearJson() ?>,
     heroClass = '<?= $this->build->class ?>',
     paragonLevel = <?= $this->build->paragon?:0 ?>,
     activePassiveSkills = {};
+    
+// Set the Name Field
+// builder.setNameInput($("#name"));
+// Set the Quality Selector
+// builder.setQualitySelect($("#quality"));
+// Set the Type Selector
+// builder.setItemTypeSelect($("#itemType"));
+// Set the Attribute Selector
+// builder.setAttributeSelect($("#attributes"));
+// Set the Socket selector
+builder.setSocketSelect($("#sockets"));
+// Set the Item Preview
+builder.setItemPreview($("#simulate-item"));
+builder.setItem(slot.val(), newItem);
+// Initialize the Item Builder
+builder.init();
+builder.setChangeCallback(calcDiff);
+// console.log(newItem);
+builder.updatePreview();
 slot.bind('change', function() {
   newItemSlot = $(this).val();
   calcDiff();
 });
-function calcDiff() {
+function calcDiff(itemBuilder) {
   calc.setParagonLevel(paragonLevel); // This has to happen before init, need to fix that.
   calc.init();
   _.each(items, function(data,slot) {
@@ -74,7 +101,7 @@ function calcDiff() {
   });  	
   calc.removeItem(newItemSlot);
   calc.setPassives(activePassiveSkills);
-  calc.parseItem(newItem, newItemSlot);
+  calc.parseItem(builder.getItem(), newItemSlot);
   // Get new stats
   var newStats = calc.run();
   // calculate the diff
@@ -84,16 +111,17 @@ function calcDiff() {
   // d3up.log(calc.diff(oldStats, newStats));
   $(".compare-diff").empty();
   // if(!hideHelpers) {
-   var h4 = $("<tr><th colspan='4'><h4>Results</h4></th></tr>"),
-       oldItemDisplay = $("<th colspan='4'>").append("Wearing: ", calc.getD3BitItemLink(oldItem)),
-       newItemDisplay = $("<th colspan='4'>").append("Scanned: ", calc.getD3BitItemLink(newItem));
+   var h4 = $('<tr class="header "><th colspan="10" class="button"></span>Comparison Results</th></tr>'),
+       vsRow = $("<td colspan='10'>").append(calc.getD3BitItemLink(oldItem), " vs ", calc.getD3BitItemLink(newItem));
     // if(oldItemOH) {
     //  oldLabel.append(" + Offhand: ", calc.getItemLink(oldItemOH));
     // }      
   // }
-  var table = $("<table/>"),
-      header = $("<tr/>").append("<th>Stat</th><th>Diff</th><th>Old</th><th>New</th>");
-  table.append(h4, $("<tr/>").append(oldItemDisplay), $("<tr/>").append(newItemDisplay), header);
+  var table = $("<table class='statistics-table' id='compare-table'/>"),
+      head = $("<thead>").append(h4, vsRow);
+      headers = $("<tr>").append("<th>Stat</th><th>Diff</th><th>Old</th><th>New</th>"),
+      body = $("<tbody>").append(headers);
+  table.append(head, body);
   $.each(diff, function(k,v) {
    var data = v.split("|"),
        diffVal = data[1],
@@ -117,8 +145,12 @@ function calcDiff() {
      row.append($("<td class='pos'/>").html(oldStat));
      row.append($("<td class='neg'/>").html(newStat));       
    }
-   table.append(row);
+   body.append(row);
   });
+  var fTR = $("<tr>"),
+      fTD1 = $("<td>Saved to:</td>"),
+      fTD2 = $("<td colspan='3'><a href=''></a></td>");
+  body.append(fTR.append(fTD1, fTD2));
   // table.append("<tr><td colspan='10'><span class='pos'>Green = Increase</span> / <span class='neg'>Red = Decrease</span></td></tr>");
   // } else {
   //   table.append("<tr><td colspan='10' style='text-align: center; font-weight: bold;'>These items are identical.</td></tr>");
@@ -129,6 +161,8 @@ function calcDiff() {
   $(".compare-diff").append(table);  
 }
 calcDiff();
+$(".statistics-table .header th").append(slot);
+
 </script>
 </body>
 </html>
