Added link to D3up icon.

--- a/application/layouts/scripts/d3bit.phtml
+++ b/application/layouts/scripts/d3bit.phtml
@@ -148,8 +148,8 @@ function calcDiff(itemBuilder) {
    body.append(row);
   });
   var fTR = $("<tr>"),
-      fTD1 = $("<td>Saved to:</td>"),
-      fTD2 = $("<td colspan='3'><a href=''></a></td>");
+      fTD1 = $("<td>Viewable:</td>"),
+      fTD2 = $("<td colspan='3'><a href='http://d3up.com/i/<?= $this->item->id'>http://d3up.com/i/<?= $this->item->id</a></td>");
   body.append(fTR.append(fTD1, fTD2));
   // table.append("<tr><td colspan='10'><span class='pos'>Green = Increase</span> / <span class='neg'>Red = Decrease</span></td></tr>");
   // } else {
