--- a/application/layouts/scripts/d3bit.phtml
+++ b/application/layouts/scripts/d3bit.phtml
@@ -149,7 +149,7 @@ function calcDiff(itemBuilder) {
   });
   var fTR = $("<tr>"),
       fTD1 = $("<td>Viewable:</td>"),
-      fTD2 = $("<td colspan='3'><a href='http://d3up.com/i/<?= $this->item->id'>http://d3up.com/i/<?= $this->item->id</a></td>");
+      fTD2 = $("<td colspan='3'><a href='http://d3up.com/i/<?= $this->item->id ?>'>http://d3up.com/i/<?= $this->item->id ?></a></td>");
   body.append(fTR.append(fTD1, fTD2));
   // table.append("<tr><td colspan='10'><span class='pos'>Green = Increase</span> / <span class='neg'>Red = Decrease</span></td></tr>");
   // } else {
