--- a/application/layouts/scripts/d3bit.phtml
+++ b/application/layouts/scripts/d3bit.phtml
@@ -17,7 +17,7 @@
   <div class="d3bit-card">
     <div class="logo"><img src="/images/logo.png"></div>
     <h3>D3Up.com Item Comparision</h3>
-    <p>Using Build: <a href="#" href="http://d3up.com/b/<?= $this->build->id ?>"><?= $this->build->name ?></a></p>
+    <p>Using Build: <a href="#" onclick="window.external.OpenLink('http://beta.d3up.com/b/<?= $this->build->id ?>')"><?= $this->build->name ?></a></p>
     <div class="filter">
       Compare Against: 
       <select class="compare-slot">
