More fixes and tweaks

--- a/application/layouts/scripts/_menu.phtml
+++ b/application/layouts/scripts/_menu.phtml
@@ -85,6 +85,7 @@
 							<li><a href="/item/sales-history">Sales History</a></li>
 							<li><a href="/item">All Items</a>
 						</ul>   
+						<a class='button' href="/item/create">Create New Item</a>
 					</div>
 	      </div>
 			</li>
