--- a/public_html/css/style.css
+++ b/public_html/css/style.css
@@ -2149,3 +2149,84 @@ div.toc.section {
 	font-size: 1em;
 	padding: 5px 15px;
 }
+#character {
+  border-top: 1px solid #333;
+}
+ul#tabs {
+  float: left;
+  width: 150px;
+  margin: 0;
+  padding: 5px;
+  list-style: none;
+  background: #111;
+  border: 1px solid #333;
+  border-top: 0;
+}
+ul#tabs li {
+  margin: 1px;
+}
+ul#tabs li.divider {
+  padding: 10px 5px 0;
+  font-weight: bold;
+  text-transform: uppercase;
+}
+ul#tabs li:first-child {
+  margin: 1px;
+  padding-top: 0;
+}
+div#tabs-render {
+  float: left;
+  width: 494px;
+  border: 0;
+  padding: 0;
+}
+div#tabs-render .content-page {
+  border: 0;
+}
+div#tabs-render.content-page .form, 
+div#tabs-render.content-page .page {
+  padding: 2px;
+  margin: 10px 5px;
+}
+div#tabs-render.content-page .form {
+  padding: 20px 50px;	     
+} 
+div#tabs-render > div {
+}
+div#tabs-render > div > h5 {
+   margin: 0;
+   font-size: 1em;
+   line-height: 1.4em;
+   font-weight: bold;
+   border-right: 0;
+   padding: 5px 10px;
+   text-transform: uppercase;
+   color: #B18135;
+   background: rgb(17,17,17); /* Old browsers */
+   background: -moz-linear-gradient(top, rgba(17,17,17,1) 0%, rgba(34,34,34,1) 100%); /* FF3.6+ */
+   background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(17,17,17,1)), color-stop(100%,rgba(34,34,34,1))); /* Chrome,Safari4+ */
+   background: -webkit-linear-gradient(top, rgba(17,17,17,1) 0%,rgba(34,34,34,1) 100%); /* Chrome10+,Safari5.1+ */
+   background: -o-linear-gradient(top, rgba(17,17,17,1) 0%,rgba(34,34,34,1) 100%); /* Opera 11.10+ */
+   background: -ms-linear-gradient(top, rgba(17,17,17,1) 0%,rgba(34,34,34,1) 100%); /* IE10+ */
+   background: linear-gradient(to bottom, rgba(17,17,17,1) 0%,rgba(34,34,34,1) 100%); /* W3C */
+   filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#111111', endColorstr='#222222',GradientType=0 ); /* IE6-9 */
+}
+div#tabs-render > div > a.button {
+  margin: 10px;
+}
+div#tabs-render > div:first-child {
+  display: block;
+}
+div#statistics {
+  float: right;
+  width: 310px;
+  background: #111;
+  border: 1px solid #333;	 
+  border-top: 0;
+  padding-bottom: 2px;    
+  margin: 0 2px 0 0;
+}
+.simulate-row .chzn-container {
+	font-size: 11px;
+	line-height: 12px;
+}
