New Sys message.

--- a/application/layouts/scripts/layout.phtml
+++ b/application/layouts/scripts/layout.phtml
@@ -108,8 +108,8 @@
 				</div>
 				<div id="sys-message" class="ui-widget ui-widget-content ui-corner-all">
 					<b>System Message</b>: 
-					Sept 17 - 
-					A <a href="http://d3up.com/update/31">small status update</a> with a preview of what's to come, hopefully this week.
+					Sept 23rd - 
+					I'm just putting the finishing touches on the new version of the site, it's very functional and I'm having a few people test it for me. I'm aiming for a Wednesday release, which will give me a few days of calm before the storm. Stay tuned!
 					Please report any bugs/problems/issues to me at <a href="mailto:aaron.cox@greymass.com">aaron.cox@greymass.com</a>!
 				</div>
 			</div>
