--- a/public_html/css/style.css
+++ b/public_html/css/style.css
@@ -1316,6 +1316,7 @@ div.title-block h5 {
 	margin: 0;
 	padding: 20px 20px 0;
 	background: rgba(0, 0, 0, 0.5); 
+	line-height: 1em;
 }
 .home div.title-block > h3,
 .home div.title-block h1,
@@ -1434,6 +1435,7 @@ div.title-block h2 {
 }
 .section .youtube-video {
 	padding: 23px;
+	text-align: center;
 }
 .content > .section:first-child {
 	border-top: 0;
