--- a/application/views/scripts/index/index.phtml
+++ b/application/views/scripts/index/index.phtml
@@ -2,6 +2,7 @@
 	<?= $this->render("./index/_sidebar.phtml") ?>
 </div>
 <div class="home content-page with-sidebar ui-helper-clearfix">
+  <?= $this->render("./index/widgets/video-builds.phtml") ?>
   <?= $this->render("./index/widgets/guides-featured.phtml") ?>
   <?= $this->render("/index/widgets/guides.phtml")?>
   <table id="recent-builds" class="d3up-table">
