--- a/application/layouts/scripts/_system-message.phtml
+++ b/application/layouts/scripts/_system-message.phtml
@@ -1,6 +1,5 @@
 <div id="sys-message">
-	<b>System Message</b>: 
-	Welcome to the new D3Up.com!
-	Take a moment to <a href="">read the patch</a> notes or <a href="">watch the video</a> where I show all the new toys!
+	<h3 style='margin: 0'>Welcome to D3Up.com version 1.0!</h3>
+	Take a moment to <a href="">read the patch</a> notes or <a href="">watch the video</a> where I show all the new features!
 	This was an absolutely major task, so please report anything strange to <a href="mailto:aaron.cox@greymass.com">aaron.cox@greymass.com</a>!
 </div>
