--- a/application/layouts/scripts/layout.phtml
+++ b/application/layouts/scripts/layout.phtml
@@ -47,7 +47,7 @@
 				<h2 class="table-header">
 				  Diablo 3 EHP/DPS/Gear Calculator and Guides
 				  <? if($this->profile): ?>
-			      <span class='user-bar'><a href="/user/edit"><?= $this->profile->username ?></a></span>
+			      <span class='user-bar'><a href="/user/edit"><?= $this->profile->username ?></a> | <a href="/user/logout">Logout</a></span>
 				  <? else: ?>
 				    <span class='user-bar'><a href="/user/login">Login</a></span>
 				  <? endif ?>
