--- a/application/views/scripts/user/guides.phtml
+++ b/application/views/scripts/user/guides.phtml
@@ -4,7 +4,7 @@
 	<thead>
 		<tr>
 			<td colspan="10" class='sorting'>
-				<a href="/guide/create" style="padding: 5px 20px" class="ui-button ui-widget ui-state-default ui-corner-all ui-button-text-only">Create new Guide</a>
+				<a href="/guide/create" style="padding: 5px 20px; width: 200px" class="button">Create new Guide</a>
 			</td>
 		</tr>
 	</thead>
