--- a/application/views/scripts/user/items.phtml
+++ b/application/views/scripts/user/items.phtml
@@ -2,6 +2,7 @@
     $this->headTitle('My Items'); 
 ?>
   <div class="content-sidebar">
+    <? if(count($this->d3bit)): ?>
     <table class='d3up-table d3bit-scanned'>
       <thead>
         <tr>
@@ -35,6 +36,7 @@
         <? endif ?>
       </tbody>
     </table>
+    <? endif ?>
   </div>
   <div class="home content-page with-sidebar ui-helper-clearfix">
 		<div class="filters">
