Notice on all builds.

--- a/application/views/scripts/record/build.phtml
+++ b/application/views/scripts/record/build.phtml
@@ -15,6 +15,9 @@
       <strong>Notice</strong>: Your character has been synchronized with the Battle.net Profile specified.
 	  </div>
 	  <? endif ?>
+	  <div class="notifications">
+      With the new release, if something isn't working on this build: Hold down SHIFT and Refresh, if stuff is still broken, <a href="mailto:aaron.cox@greymass.com">email me</a>.
+	  </div>
     <ul id="tabs">
       <li class='divider'>Build</li>
       <li><a data-tab="#gear" class="button current">Gear</a></a></li>
