Fix for youtube video

--- a/application/views/scripts/index/widgets/video-builds.phtml
+++ b/application/views/scripts/index/widgets/video-builds.phtml
@@ -1,4 +1,4 @@
 <div class="page">
   <h5 style='color: #B18135; margin: 0'>Using D3Up.com</h5>
-  <iframe width="562" height="315" src="http://www.youtube.com/embed/OaRts-nmOE8" frameborder="0" allowfullscreen></iframe>
+  <iframe width="562" height="315" src="http://www.youtube.com/embed/OaRts-nmOE8?wmode=transparent" frameborder="0" allowfullscreen></iframe>
 </div>
