Fix to width on recent builds.

--- a/public_html/css/style.css
+++ b/public_html/css/style.css
@@ -889,6 +889,9 @@ tr.compared > td:first-child {
 	height: 36px;
 	max-width: 135px;
 }
+#recent-builds td.stat {
+	font-size: 12px;
+}
 #recent-builds .votes,
 #recent-builds .views {
 	display: none;
