Homepage got a new widget instead of using the builds table.

--- a/application/views/scripts/index/index.phtml
+++ b/application/views/scripts/index/index.phtml
@@ -11,7 +11,7 @@
         <td colspan="10"><h5 style="color: #B18135">Recent Builds</h5></td>
       </tr>
     </thead>
-    <?= $this->render("./build/_build-table.phtml")?>
+    <?= $this->render("./index/widgets/recent-builds.phtml")?>
   </table>
 </div>
 <script type="text/javascript" charset="utf-8">
