--- a/public_html/css/d3bit.css
+++ b/public_html/css/d3bit.css
@@ -16,7 +16,7 @@ body {
 .d3bit-card > h3 {
   font-size: 16px;
   font-weight: normal;
-  margin: 12px;
+  margin: 12px 0 4px;
 } 
 .d3bit-card > p {
   font-size: 12px;
