--- a/application/layouts/scripts/d3bit.phtml
+++ b/application/layouts/scripts/d3bit.phtml
@@ -15,9 +15,9 @@
 </head>
 <body>
   <div class="d3bit-card">
-    <div class="logo"><img src="http://beta.d3up.com/images/logo.jpg"></div>
+    <div class="logo"><img src="http://d3up.com/images/logo.jpg"></div>
     <h3><a href="#" onclick="window.external.OpenLink('http://d3up.com')">D3Up.com</a> Item Comparision</h3>
-    <p>Using Build: <a href="#" onclick="window.external.OpenLink('http://beta.d3up.com/b/<?= $this->build->id ?>')"><?= $this->build->name ?></a></p>
+    <p>Using Build: <a href="#" onclick="window.external.OpenLink('http://d3up.com/b/<?= $this->build->id ?>')"><?= $this->build->name ?></a></p>
     <select class="compare-slot">
       <? foreach($this->slots as $slot): ?>
         <option value='<?=$slot?>'><?= $slot ?></option>
