--- a/application/layouts/scripts/d3bit.phtml
+++ b/application/layouts/scripts/d3bit.phtml
@@ -9,6 +9,7 @@
 			->appendFile("/js/d3up.js")
 			->appendFile("/js/underscore.js")
 			->appendFile("/js/skills.js")
+			->appendFile("/js/unmin/buildv2.js")
 			->appendFile("/js/unmin/calcv2.js")
 			->appendFile("/js/unmin/itembuilder.js")
 	?>
@@ -28,137 +29,99 @@
       <p><a href=''></a></p>
     </div>
     <div id='simulate-item'>
-      test
     </div>
   </div>
-<script type="text/javascript" charset="utf-8">
-<? if($this->build->passives && $this->build->passives != "null" && count($this->build->passives)): ?>
-var activePassives = <?= json_encode($this->build->passives->export()); ?>;
-<? else: ?>
-var activePassives = [];
-<? endif; ?>
-<? if($this->build->actives && $this->build->actives != "null" && count($this->build->actives)): ?>
-var activeActives = <?= json_encode($this->build->actives->export()); ?>;
-<? else: ?>
-var activeActives = [];
-<? endif; ?>  
-var newItem = <?= json_encode($this->item->cleanExport()) ?>,
-    slot = $(".compare-slot"),
-    newItemSlot = slot.val(),
-    calc = new d3up.BuildCalculator,
-    builder = new d3up.ItemBuilder,
-    items = <?= $this->build->equipment->getGearJson() ?>,
-    heroClass = '<?= $this->build->class ?>',
-    paragonLevel = <?= $this->build->paragon?:0 ?>,
-    activePassiveSkills = {};
-    
-// Set the Name Field
-// builder.setNameInput($("#name"));
-// Set the Quality Selector
-// builder.setQualitySelect($("#quality"));
-// Set the Type Selector
-// builder.setItemTypeSelect($("#itemType"));
-// Set the Attribute Selector
-// builder.setAttributeSelect($("#attributes"));
-// Set the Socket selector
-builder.setSocketSelect($("#sockets"));
-// Set the Item Preview
-builder.setItemPreview($("#simulate-item"));
-builder.setItem(slot.val(), newItem);
-// Initialize the Item Builder
-builder.init();
-builder.setChangeCallback(calcDiff);
-// console.log(newItem);
-builder.updatePreview();
-console.log(slot);
-slot.bind('change', function() {
-  newItemSlot = $(this).val();
-  calcDiff();
-});
-function calcDiff(itemBuilder) {
-  calc.setParagonLevel(paragonLevel); // This has to happen before init, need to fix that.
-  calc.init();
-  _.each(items, function(data,slot) {
-  	calc.setItem(slot, data);
-  });  	
-  _.each(activePassives, function(v,k) {
-    activePassiveSkills[k] = passives[heroClass][v];
-  });
-  calc.setClass(heroClass);
-  calc.setPassives(activePassiveSkills);
-  var stats = calc.run(),
-      oldStats = _.extend({}, stats);
-  var oldItem = items[newItemSlot];
-  calc.init();
-  calc.setClass(heroClass);
-  calc.setPassives(activePassiveSkills);
-  // Add the new item
-  // d3up.log(newItem, newItemSlot);
-  _.each(items, function(data,slot) {
-  	calc.setItem(slot, data);
-  });  	
-  calc.removeItem(newItemSlot);
-  calc.setPassives(activePassiveSkills);
-  calc.parseItem(builder.getItem(), newItemSlot);
-  // Get new stats
-  var newStats = calc.run();
-  // calculate the diff
-  var diff = calc.diff(oldStats, newStats);
-  // Debug the Diff
-  // d3up.log(oldStats, newStats);
-  // d3up.log(calc.diff(oldStats, newStats));
-  $(".compare-diff").empty();
-  // if(!hideHelpers) {
-   var h4 = $('<tr class="header "><th colspan="10" class="button">Comparison Results</th></tr>'),
-       vsRow = $("<td colspan='10'>").append(calc.getD3BitItemLink(oldItem), " vs ", calc.getD3BitItemLink(newItem));
-    // if(oldItemOH) {
-    //  oldLabel.append(" + Offhand: ", calc.getItemLink(oldItemOH));
-    // }      
-  // }
-  // h4.find("th").append(slot);
-  var table = $("<table class='statistics-table' id='compare-table'/>"),
-      head = $("<thead>").append(h4, vsRow);
-      headers = $("<tr>").append("<th>Stat</th><th>Diff</th><th>Old</th><th>New</th>"),
-      body = $("<tbody>").append(headers);
-  table.append(head, body);
-  $.each(diff, function(k,v) {
-   var data = v.split("|"),
-       diffVal = data[1],
-       diffName = data[0],
-       row = $("<tr/>");
-   row.append($("<td/>").html(diffName));
-   var oldStat = Math.round(oldStats[k] * 100) / 100,
-       newStat = Math.round(newStats[k] * 100) / 100;
-   if(oldStat > 99999) {
-     oldStat = Math.round(oldStat / 10) / 100 + "k";
-   }
-   if(newStat > 99999) {
-     newStat = Math.round(newStat / 10) / 100 + "k";
-   }
-   if(diffVal > 0) {
-     row.append($("<td class='diff'/>").html("+"+diffVal).addClass("pos"));
-     row.append($("<td class='neg'/>").html(oldStat));
-     row.append($("<td class='pos'/>").html(newStat));       
-   } else {
-     row.append($("<td class='diff'/>").html(diffVal).addClass("neg"));
-     row.append($("<td class='pos'/>").html(oldStat));
-     row.append($("<td class='neg'/>").html(newStat));       
-   }
-   body.append(row);
-  });
-  // table.append("<tr><td colspan='10'><span class='pos'>Green = Increase</span> / <span class='neg'>Red = Decrease</span></td></tr>");
-  // } else {
-  //   table.append("<tr><td colspan='10' style='text-align: center; font-weight: bold;'>These items are identical.</td></tr>");
-  // }
-  // items.find("div a").each(function() {
-  //   $(this).bindTooltip();
-  // });     
-  $(".compare-diff").append(table);  
-  
-}
-calcDiff();
-// slot.hide();
-// $(".statistics-table .header th").append(slot);
+  <script type="text/javascript">
+	  $(function() {
+	    // ------------------------------
+      // BuildV2 Scripts for This Page
+      // ------------------------------
+      var skills = {
+            actives: <?= json_encode(($this->build->actives instanceOf Shanty_Mongo_Document) ? $this->build->actives->export() : array()); ?>,
+            passives: <?= json_encode(($this->build->passives instanceOf Shanty_Mongo_Document) ? $this->build->passives->export() : array()); ?>
+          },
+          gearSlots = $("#build-gear .equipped"),
+          gear = <?= $this->build->equipment->getGearJson() ?>,
+          newItem = <?= json_encode($this->item->cleanExport()) ?>,
+          meta = {
+            level: '<?= $this->build->level ?>',
+            paragon: '<?= $this->build->paragon ?>',
+            heroClass: '<?= $this->build->class ?>'
+          },
+          build = new d3up.Build({
+            gear: gear, 
+            skills: skills,
+            meta: meta
+          }),
+          buildCompare = new d3up.Build({
+            gear: gear, 
+            skills: skills,
+            meta: meta
+          });
+      build.run();
+      buildCompare.run();
+      $(".compare-slot").bind('change', function() {
+        build.setGear(gear);
+        buildCompare.setGear(gear);
+        build.run();
+        buildCompare.run();
+        // console.log(build, buildCompare);
+        var slotToReplace = $(this).val();
+        buildCompare.setItem(slotToReplace, newItem);
+        buildCompare.run();
+        var diff = build.diffWith(buildCompare);
+        // Table Rendering
+        $(".compare-diff").empty();
+        var h4 = $('<tr class="header "><th colspan="10" class="button">Comparison Results</th></tr>'),
+            oldLink = build.calc.getD3BitItemLink(build.calc.getItem(slotToReplace));
+        if(!build.calc.getItem(slotToReplace).name) {
+          oldLink = "Nothing (" + slotToReplace + ")";
+        }
+        var newLink = buildCompare.calc.getD3BitItemLink(buildCompare.calc.getItem(slotToReplace)),
+             vsRow = $("<td colspan='10'>").append(oldLink, " vs ", newLink);
+        var table = $("<table class='statistics-table' id='compare-table'/>"),
+            head = $("<thead>").append(h4, vsRow);
+            headers = $("<tr>").append("<th>Stat</th><th>Diff</th><th>Old</th><th>New</th>"),
+            body = $("<tbody>").append(headers);
+        table.append(head, body);
+        $.each(diff, function(k,v) {
+         var data = v.split("|"),
+             diffVal = data[1],
+             diffName = data[0],
+             row = $("<tr/>"), 
+             oldStats = build.getStats()
+             newStats = buildCompare.getStats();
+         row.append($("<td/>").html(diffName));
+         var oldStat = Math.round(oldStats[k] * 100) / 100,
+             newStat = Math.round(newStats[k] * 100) / 100;
+         if(oldStat > 99999) {
+           oldStat = Math.round(oldStat / 10) / 100 + "k";
+         }
+         if(newStat > 99999) {
+           newStat = Math.round(newStat / 10) / 100 + "k";
+         }
+         if(diffVal > 0) {
+           row.append($("<td class='diff'/>").html("+"+diffVal).addClass("pos"));
+           row.append($("<td class='neg'/>").html(oldStat));
+           row.append($("<td class='pos'/>").html(newStat));       
+         } else {
+           row.append($("<td class='diff'/>").html(diffVal).addClass("neg"));
+           row.append($("<td class='pos'/>").html(oldStat));
+           row.append($("<td class='neg'/>").html(newStat));       
+         }
+         body.append(row);
+        });
+        // table.append("<tr><td colspan='10'><span class='pos'>Green = Increase</span> / <span class='neg'>Red = Decrease</span></td></tr>");
+        // } else {
+        //   table.append("<tr><td colspan='10' style='text-align: center; font-weight: bold;'>These items are identical.</td></tr>");
+        // }
+        // items.find("div a").each(function() {
+        //   $(this).bindTooltip();
+        // });     
+        $(".compare-diff").append(table);
+      });
+      $(".compare-slot").trigger('change');
+    });
 
 </script>
 <script type="text/javascript">
