--- a/public_html/css/d3bit.css
+++ b/public_html/css/d3bit.css
@@ -1,4 +1,4 @@
-html, body { overflow: hidden; height: 100% }
+html, body { height: 100% }
 body { margin:0; padding:0; }
 body {
   font-size: 12px;
@@ -13,12 +13,12 @@ body {
   height: 430px;
   border: 1px solid #333;
 }
-.d3bit-card > h3 {
+.d3bit-card h3 {
   font-size: 16px;
   font-weight: normal;
-  margin: 12px 0 4px;
+  margin: 2px 0 4px;
 } 
-.d3bit-card > p {
+.d3bit-card p {
   font-size: 12px;
   font-weight: normal;
   margin: 4px;
@@ -220,4 +220,19 @@ a:hover .ui-button-text {
 }
 .compare-slot {
 	float: right;
+	margin: 0;
+	margin-right: 5px;
+}
+/* jScroll Pane */
+.jspContainer{overflow:hidden;position:relative}.jspPane{position:absolute}.jspVerticalBar{position:absolute;top:0;right:0;width:10px;height:100%;background:red}.jspHorizontalBar{position:absolute;bottom:0;left:0;width:100%;height:0px;background:red}.jspVerticalBar *,.jspHorizontalBar *{margin:0;padding:0}.jspCap{display:none}.jspHorizontalBar .jspCap{float:left}.jspTrack{background:#dde;position:relative}.jspDrag{background:#bbd;position:relative;top:0;left:0;cursor:pointer}.jspHorizontalBar .jspTrack,.jspHorizontalBar .jspDrag{float:left;height:100%}.jspArrow{background:#50506d;text-indent:-20000px;display:block;cursor:pointer}.jspArrow.jspDisabled{cursor:default;background:#80808d}.jspVerticalBar .jspArrow{height:10px}.jspHorizontalBar .jspArrow{width:10px;float:left;height:100%}.jspVerticalBar .jspArrow:focus{outline:0}.jspCorner{background:#eeeef4;float:left;height:100%}* html .jspCorner{margin:0 -3px 0 0}
+.jspDrag {
+  background-color: rgba(0,0,0,0.8)  !important;
+}
+.jspTrack {
+  background-color: rgba(255,255,255,0.4) !important;
+}
+.jspVerticalBar {
+  width: 10px !important;
+  opacity: 0.4;
+  background-color: rgba(255,255,255,0.4);
 }
